Added a donut chart

--- a/money_usage/usage/templates/usage/base.html
+++ b/money_usage/usage/templates/usage/base.html
@@ -9,6 +9,7 @@
 <body>
     {% block contents %}
     {% endblock  %}
+    <script src="https://cdn.jsdelivr.net/npm/scichart/index.min.js"></script>
     <script src="{% static "/usage/js/index.js" %}"></script>
 </body>
 </html>
