Created a spent model

--- a/money_usage/usage/templates/usage/index.html
+++ b/money_usage/usage/templates/usage/index.html
@@ -2,6 +2,6 @@
 {% block contents %}
 <h1>Hi, welcome to money usage</h1>
 <p id="json"></p>
-<div id="scichart-root"></div>
+<div id="piechart"></div>
 {{ income|json_script:"all-income" }}
 {% endblock %}
