--- a/money_usage/usage/templates/usage/base.html
+++ b/money_usage/usage/templates/usage/base.html
@@ -9,7 +9,7 @@
 <body>
     {% block contents %}
     {% endblock  %}
-    <script src="https://cdn.jsdelivr.net/npm/scichart/index.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{% static "/usage/js/index.js" %}"></script>
 </body>
 </html>
